--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,25 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -31,6 +50,13 @@
             <version>2.8.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.atteo.classindex</groupId>
+            <artifactId>classindex</artifactId>
+            <version>3.11</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
