--- a/duelnode-api/pom.xml
+++ b/duelnode-api/pom.xml
@@ -40,6 +40,12 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/proj/libs/WorldEdit.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>6.2.0.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
