Commit #6 start gameserver development

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>duelnode-lobby</module>
         <module>duelnode-api</module>
+        <module>duelnode-gameserver</module>
     </modules>
 
     <properties>
