--- a/duelnode-gameserver/pom.xml
+++ b/duelnode-gameserver/pom.xml
@@ -23,6 +23,16 @@
                 <directory>proj/rec</directory>
             </resource>
         </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <outputDirectory>C:\Users\Isa\Desktop\gameserver\plugins</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
