--- a/duelnode-lobby/pom.xml
+++ b/duelnode-lobby/pom.xml
@@ -43,6 +43,13 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
+            <artifactId>holographicdisplays-api</artifactId>
+            <version>2.4.9</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
