--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <module>duelnode-gameserver</module>
     </modules>
 
+    <repositories>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
